git branch git add .

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h3>fyaslsa </h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, numquam.</p>
 </body>
 </html>
